tests/NormalTests/paczka1/fuzzy1/91112314.err
Error in line 28: pX6f8rCKeP A179 5,0
Error in line 29: pX6f8rCKeP A343 38,3
Error in line 32: Fq7tSMBHtqi A846 15,4
